# teaLeaf

./: .gitignore
c/: build.sh  buildGenerateTeaLeaf.sh  generateTeaLeaf.c
c/libbmp/: README.md  libbmp.c
server/: server.cabal
server/src/: Main.hs
