name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danielbarter/tealeaf
author:              Daniel Barter
maintainer:          danielbarter@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , bytestring
                     , process
                     , unix
